--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 "biopython",
 "joblib",
 "numba",
-"numpy>=1.17",
+"numpy<1.24",
 "skorch>=0.9.0",
 "torch>=1.7.0,<2.0.0",
 "tqdm"
